helpers/css/index.css
/* ... */
body, table, tr, td, 
textarea, fieldset input[type="text"], .sidebar_search_form input[type="text"],
textarea#new_post_content, textarea#edit_post_content, textarea#new_topic_content  {
    margin: 0;
    padding: 0;
    color: #444;  
    border-spacing: 0;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	text-rendering: optimizeLegibility;
	font-family: "Georgia", "Times New Roman", Times, serif;
}

h1, h2, h3 {
    padding: 0;
    margin: 0 0 10px;
    /*color: #F49500;*/
}

h1 {
    /*text-transform: uppercase;*/
    font-size: 2.4rem;
}

h2 {
    color: #000;
    /*text-transform: uppercase;*/
    font-size: 1.8rem;
}

h3 {
    text-transform: uppercase;
    letter-spacing: 2px;
    font-size: 1.1rem;
}

p, blockquote, ul, ol {
    max-width: 900px;
    line-height: 18px;
}

blockquote {
    padding-left: 20px;
    background: url(images/img05.gif) repeat-y;
}

a, a.quote_in_post_link {
    color: #444;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
    cursor:pointer;
}

.post_content a {
    color: #005689;
	text-decoration: underline;
}

a.quote_in_post_link,
.list_sub_text a {
    color: #6b6b6b;
	text-decoration: none;
	text-transform: uppercase;
	font-size: 1.2rem;
}
a.quote_in_post_link,
.list_sub_text a {
    color: #6b6b6b;
	text-decoration: none;
	text-transform: uppercase;
	font-size: 1.2rem;
	margin-bottom: 5px;
}
a.quote_in_post_link {
	display: block;
}

a.user_name_link_img {
    float: left;
}

.post_user_info a.user_name_link {
	text-transform: uppercase;
	font-size: 1.1rem;
	}

.no-line:hover {
	text-decoration: none;
	}

b, strong {
    font-weight: bold;
}
em, i {
	font-style: italic;
	}

textarea, input[type="text"] {
	border: 1px solid #ddd;
	padding: 5px;
	font-size: 1.4rem;
}
.post_content span {
    word-wrap: break-word;
}
.post_content span {
    word-wrap: break-word;
}

.forum_info + p {
    margin-top: 10px;
    margin-left: 5px;
}
/* CONTAINERS (Layout topography) */

.main {
    padding-left: 10px;
}

#main-content, .principal_list {
    float: left;
    width: 100%;
    max-width: 900px;
}
#new_topic_form {
	margin-top: 5em;
	}
#sidebar {
    float: right;
    width: 250px;
    margin-left: 0;
    font-size: 14px;
	background: #f7f7f7;
}

#main-content h1 {
    font-size: 4.0rem;
    font-weight: 300;
    margin-bottom: 20px;
	letter-spacing: -1px;
	line-height: 1.25;
}
.post_content,
form#report_post_form,
form#new_post_form,
form#new_topic_form,
form#edit_post_form  {
	float: right;
    max-width: 720px;
    width: 100%;
}
form#new_topic_form  {
	float: right;
    max-width: 720px;
    width: 100%;
}

form#new_post_form.scroll {
    padding-top: 80px;
    margin-top: -30px;
}
form.text-editor {
    padding: 1em 0 0 0;
    margin: 0;
}
.footer-widget li[class^="fa-"]:after,
.standard-form textarea:after {
	content: '';
	clear: both;
	display:table;
	}

/* TYPOGRAPHY */

.forum_info, .list_sub_text, .quote_in_post, .post_alternatives, span.perma-link, .post_content span.post_date,
input.vote_button, button.vote_button, .median-vote input[type="text"], .green_message, .red_message,
.sortable, textarea, input[type="text"],
.btn-blue, .vote-container.float-right, #vote_container_grey_box td, .vote_result_box, .post_user_info,
.login-column, .footer-widget
	{ font-family: 'Lato','Open Sans', Helvetica, Arial, sans-serif; } /* Standard font for all sans-serif elements */
	
.post_content {
	font-size: 1.7rem;
	}
.forum_info {
	font-size: 1.3rem;
	}
.topic_list_row {
}
.topic_list_row span.numerical_column,
.topic_list_row span.last_post_column {
    font-size: 1.4rem;
}
.post_content span, textarea {
	line-height: 1.5;
	font-size: 1.7rem;
}

.quote_in_post:before {
	content: '”';
    font-size: 5.9rem;
    color: #ccc;
    display: block;
    float: left;
    font-family: "Times New Roman", Times, serif;
    margin-left: -20px;
    font-weight: 600;
    margin: -22px 0 0 -36px;		
	}
.quote_in_post > .quote_in_post:before {
	content:'';
	}

.small {
	font-size: 1.3rem;
	}
.post_content span.post-user-full-name {
	font-size: 2.2rem;
	}
footer h2 {
    text-transform: uppercase;
    font-size: 1.5rem;
    font-weight: bold;
	color: #ddd;
	}
	
/* BUTTONS */

button[type="submit"]:before {
	content: '\f139';
	font: normal normal normal 14px/1 FontAwesome;
	margin-right: 5px;
	}
button[type="submit"].btn-login {
    float: right;
	width: auto;
	}
button[type="submit"].btn-login:before {
	content: '\f090';
	}
	
/* FONT AWESOME ICONS */

i.fa {
	margin-right: 5px;
	}

li.mb-delegate a:before, 
li.mb-individual a:before, 
li.mb-logout a:before,
#vote_container_grey_box h2.h2-information:before,
#vote_container_grey_box h2.h2-stats:before,
#vote_container_grey_box h2.h2-tools:before,
a.link-icon:before, .post_user_info a.user_name_link:before,
li.mb-members a:before, li.mb-messages a:before, li.mb-messages-unread a:before, li.mb-votes a:before, li.mb-forum a:before, li.mb-admin a:before,
.social-media-icons-dd .fa:before,
li.i-facebook:before, li.i-twitter:before, li.i-google-plus:before, li.i-youtube:before {
	font: normal normal normal 14px/1 FontAwesome;
	margin-right: 5px;
	}

li.mb-messages-unread a:before {
    font: normal normal normal 18px/1 FontAwesome;
    margin-right: 5px;
    }

#vote_container_grey_box h2:after {
	font: normal normal normal 14px/1 FontAwesome;
	}
/* Menubar icons */
li.mb-members a:before 		{ content: '\f007'; } 	/* User icon */
li.mb-messages a:before     { content: '\f003'; }   /* Mail icon */
li.mb-messages-unread a:before     { content: '\f199'; }   /* Mail icon */
li.mb-votes a:before 		{ content: '\f00c'; }	/* Check mark icon */
li.mb-forum a:before 		{ content: '\f0e5'; }	/* Speech bubble icon */
li.mb-admin a:before 		{ content: '\f013'; }	/* Cog wheel icon */
li[class^="mb-"] ul li a:before,
li[class^="f-"] ul li a:before { 
	content: none;
	}
li.mb-delegate a:before {
	content: '\f0c0';
	}
li.mb-individual a:before {
	content: '\f007';
	}
/* ... */

